--- a/style.css
+++ b/style.css
@@ -97,11 +97,15 @@ button:hover {
   width: 70px;
 }
 
+.new-book .cancel {
+  background-color: rgb(255, 68, 68);
+}
+
 .container {
   width: 100%;
   display: grid;
   grid-auto-flow: column;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 30px;
 }
 
@@ -118,4 +122,23 @@ button:hover {
 
 .book-card em {
   margin-bottom: 20px;
+}
+
+.book-card .buttons {
+  display: flex;
+  gap: 10px
+}
+
+.book-card button {
+  margin: 0;
+  margin-top: 20px;
+  width: 140px;
+  height: 30px;
+  font-size: 18px;
+  background-color: rgb(45, 149, 175);
+  border-radius: 6px;
+}
+
+.book-card button.delete {
+  background-color: rgb(255, 110, 110);
 }
